draft extract from esolat jakim api

--- a/python/objectives_1_and_2.ipynb
+++ b/python/objectives_1_and_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Draft for Google Search"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -66,6 +73,295 @@
     "soup = BeautifulSoup(googleSerachPage)\n",
     "soup.find(\"table\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Draft for e-Solat JAKIM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jakimUrlStr = \"https://www.e-solat.gov.my/index.php\"\n",
+    "urlParams = {\n",
+    "    \"r\": \"esolatApi/takwimsolat\",\n",
+    "    \"zone\": \"WLY01\",\n",
+    "    \"period\": \"duration\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getDataFrameFroRequest(strUrl, paramUrl, dataUrl={}):\n",
+    "    req = None\n",
+    "    if (len(dataUrl) > 0):\n",
+    "        req = reqPost(url=strUrl, params=paramUrl, data=dataUrl)\n",
+    "    else:\n",
+    "        req = reqPost(url=strUrl, params=paramUrl)\n",
+    "    \n",
+    "    resJson = req.json()[\"prayerTime\"]\n",
+    "    return pd.DataFrame(resJson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urlData2018 = { \"datestart\": \"2018-01-01\", \"dateend\": \"2018-12-31\" }\n",
+    "eSolatDataFrame2018 = getDataFrameFroRequest(jakimUrlStr, urlParams, urlData2018)\n",
+    "\n",
+    "urlData2019 = { \"datestart\": \"2019-01-01\", \"dateend\": \"2019-12-31\" }\n",
+    "eSolatDataFrame2019 = getDataFrameFroRequest(jakimUrlStr, urlParams, urlData2019)\n",
+    "\n",
+    "urlData2020 = { \"datestart\": \"2020-01-01\", \"dateend\": \"2020-12-31\" }\n",
+    "eSolatDataFrame2020 = getDataFrameFroRequest(jakimUrlStr, urlParams, urlData2020)\n",
+    "\n",
+    "urlData2021 = { \"datestart\": \"2021-01-01\", \"dateend\": \"2021-12-31\" }\n",
+    "eSolatDataFrame2021 = getDataFrameFroRequest(jakimUrlStr, urlParams, urlData2021)\n",
+    "\n",
+    "urlData2022 = { \"datestart\": \"2022-01-01\", \"dateend\": \"2022-12-31\" }\n",
+    "eSolatDataFrame2022 = getDataFrameFroRequest(jakimUrlStr, urlParams, urlData2022)\n",
+    "\n",
+    "urlData2023 = { \"datestart\": \"2023-01-01\", \"dateend\": \"2023-12-31\" }\n",
+    "eSolatDataFrame2023 = getDataFrameFroRequest(jakimUrlStr, urlParams, urlData2023)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hijri</th>\n",
+       "      <th>date</th>\n",
+       "      <th>day</th>\n",
+       "      <th>imsak</th>\n",
+       "      <th>fajr</th>\n",
+       "      <th>syuruk</th>\n",
+       "      <th>dhuhr</th>\n",
+       "      <th>asr</th>\n",
+       "      <th>maghrib</th>\n",
+       "      <th>isha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1444-06-08</td>\n",
+       "      <td>01-Jan-2023</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>05:56:00</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>07:18:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1444-06-09</td>\n",
+       "      <td>02-Jan-2023</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>05:57:00</td>\n",
+       "      <td>06:07:00</td>\n",
+       "      <td>07:18:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1444-06-10</td>\n",
+       "      <td>03-Jan-2023</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>05:57:00</td>\n",
+       "      <td>06:07:00</td>\n",
+       "      <td>07:18:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1444-06-11</td>\n",
+       "      <td>04-Jan-2023</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>05:58:00</td>\n",
+       "      <td>06:08:00</td>\n",
+       "      <td>07:19:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1444-06-12</td>\n",
+       "      <td>05-Jan-2023</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>05:58:00</td>\n",
+       "      <td>06:08:00</td>\n",
+       "      <td>07:19:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:33:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>1445-06-14</td>\n",
+       "      <td>27-Dec-2023</td>\n",
+       "      <td>Wednesday</td>\n",
+       "      <td>05:54:00</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>07:15:00</td>\n",
+       "      <td>13:17:00</td>\n",
+       "      <td>16:39:00</td>\n",
+       "      <td>19:14:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>1445-06-15</td>\n",
+       "      <td>28-Dec-2023</td>\n",
+       "      <td>Thursday</td>\n",
+       "      <td>05:54:00</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>07:16:00</td>\n",
+       "      <td>13:17:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:14:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>1445-06-16</td>\n",
+       "      <td>29-Dec-2023</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>05:55:00</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>07:16:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>1445-06-17</td>\n",
+       "      <td>30-Dec-2023</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>05:55:00</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>07:17:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>1445-06-18</td>\n",
+       "      <td>31-Dec-2023</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>05:56:00</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>07:17:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>365 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          hijri         date        day     imsak      fajr    syuruk  \\\n",
+       "0    1444-06-08  01-Jan-2023     Sunday  05:56:00  06:06:00  07:18:00   \n",
+       "1    1444-06-09  02-Jan-2023     Monday  05:57:00  06:07:00  07:18:00   \n",
+       "2    1444-06-10  03-Jan-2023    Tuesday  05:57:00  06:07:00  07:18:00   \n",
+       "3    1444-06-11  04-Jan-2023  Wednesday  05:58:00  06:08:00  07:19:00   \n",
+       "4    1444-06-12  05-Jan-2023   Thursday  05:58:00  06:08:00  07:19:00   \n",
+       "..          ...          ...        ...       ...       ...       ...   \n",
+       "360  1445-06-14  27-Dec-2023  Wednesday  05:54:00  06:04:00  07:15:00   \n",
+       "361  1445-06-15  28-Dec-2023   Thursday  05:54:00  06:04:00  07:16:00   \n",
+       "362  1445-06-16  29-Dec-2023     Friday  05:55:00  06:05:00  07:16:00   \n",
+       "363  1445-06-17  30-Dec-2023   Saturday  05:55:00  06:05:00  07:17:00   \n",
+       "364  1445-06-18  31-Dec-2023     Sunday  05:56:00  06:06:00  07:17:00   \n",
+       "\n",
+       "        dhuhr       asr   maghrib      isha  \n",
+       "0    13:19:00  16:42:00  19:16:00  20:31:00  \n",
+       "1    13:20:00  16:42:00  19:17:00  20:32:00  \n",
+       "2    13:20:00  16:43:00  19:17:00  20:32:00  \n",
+       "3    13:21:00  16:43:00  19:18:00  20:32:00  \n",
+       "4    13:21:00  16:44:00  19:18:00  20:33:00  \n",
+       "..        ...       ...       ...       ...  \n",
+       "360  13:17:00  16:39:00  19:14:00  20:29:00  \n",
+       "361  13:17:00  16:40:00  19:14:00  20:29:00  \n",
+       "362  13:18:00  16:40:00  19:15:00  20:30:00  \n",
+       "363  13:18:00  16:41:00  19:15:00  20:30:00  \n",
+       "364  13:19:00  16:41:00  19:16:00  20:31:00  \n",
+       "\n",
+       "[365 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eSolatDataFrame2023"
+   ]
   }
  ],
  "metadata": {
@@ -84,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
