update esolat jakim with 2025 data

--- a/python/data extraction and cleanup/request_Data_esolatjakim.ipynb
+++ b/python/data extraction and cleanup/request_Data_esolatjakim.ipynb
@@ -1249,7 +1249,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>fajr</th>\n",
+       "      <th>zuhr</th>\n",
+       "      <th>asr</th>\n",
+       "      <th>maghrib</th>\n",
+       "      <th>isha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-01-01</td>\n",
+       "      <td>06:07:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-01-02</td>\n",
+       "      <td>06:07:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-01-03</td>\n",
+       "      <td>06:08:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-01-04</td>\n",
+       "      <td>06:08:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:33:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-01-05</td>\n",
+       "      <td>06:09:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>19:19:00</td>\n",
+       "      <td>20:33:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>2025-12-27</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>13:17:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:14:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>2025-12-28</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>2025-12-29</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>2025-12-30</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>2025-12-31</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>365 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date      fajr      zuhr       asr   maghrib      isha\n",
+       "0    2025-01-01  06:07:00  13:20:00  16:42:00  19:17:00  20:31:00\n",
+       "1    2025-01-02  06:07:00  13:20:00  16:43:00  19:17:00  20:32:00\n",
+       "2    2025-01-03  06:08:00  13:21:00  16:43:00  19:18:00  20:32:00\n",
+       "3    2025-01-04  06:08:00  13:21:00  16:44:00  19:18:00  20:33:00\n",
+       "4    2025-01-05  06:09:00  13:21:00  16:44:00  19:19:00  20:33:00\n",
+       "..          ...       ...       ...       ...       ...       ...\n",
+       "360  2025-12-27  06:04:00  13:17:00  16:40:00  19:14:00  20:29:00\n",
+       "361  2025-12-28  06:04:00  13:18:00  16:40:00  19:15:00  20:29:00\n",
+       "362  2025-12-29  06:05:00  13:18:00  16:41:00  19:15:00  20:30:00\n",
+       "363  2025-12-30  06:05:00  13:19:00  16:41:00  19:16:00  20:30:00\n",
+       "364  2025-12-31  06:06:00  13:19:00  16:42:00  19:16:00  20:31:00\n",
+       "\n",
+       "[365 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urlData2025 = { \"datestart\": \"2025-01-01\", \"dateend\": \"2025-12-31\" }\n",
+    "eSolatDataFrame2025 = getDataFrameFromReq(urlStr, urlParams, urlData2025)\n",
+    "df2025 = parseDfForDB(eSolatDataFrame2025)\n",
+    "df2025"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1337,8 +1505,8 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2552</th>\n",
-       "      <td>2024-12-27</td>\n",
+       "      <th>2917</th>\n",
+       "      <td>2025-12-27</td>\n",
        "      <td>06:04:00</td>\n",
        "      <td>13:17:00</td>\n",
        "      <td>16:40:00</td>\n",
@@ -1346,17 +1514,17 @@
        "      <td>20:29:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2553</th>\n",
-       "      <td>2024-12-28</td>\n",
-       "      <td>06:05:00</td>\n",
+       "      <th>2918</th>\n",
+       "      <td>2025-12-28</td>\n",
+       "      <td>06:04:00</td>\n",
        "      <td>13:18:00</td>\n",
        "      <td>16:40:00</td>\n",
        "      <td>19:15:00</td>\n",
-       "      <td>20:30:00</td>\n",
+       "      <td>20:29:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2554</th>\n",
-       "      <td>2024-12-29</td>\n",
+       "      <th>2919</th>\n",
+       "      <td>2025-12-29</td>\n",
        "      <td>06:05:00</td>\n",
        "      <td>13:18:00</td>\n",
        "      <td>16:41:00</td>\n",
@@ -1364,17 +1532,17 @@
        "      <td>20:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2555</th>\n",
-       "      <td>2024-12-30</td>\n",
-       "      <td>06:06:00</td>\n",
+       "      <th>2920</th>\n",
+       "      <td>2025-12-30</td>\n",
+       "      <td>06:05:00</td>\n",
        "      <td>13:19:00</td>\n",
        "      <td>16:41:00</td>\n",
        "      <td>19:16:00</td>\n",
        "      <td>20:30:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2556</th>\n",
-       "      <td>2024-12-31</td>\n",
+       "      <th>2921</th>\n",
+       "      <td>2025-12-31</td>\n",
        "      <td>06:06:00</td>\n",
        "      <td>13:19:00</td>\n",
        "      <td>16:42:00</td>\n",
@@ -1383,7 +1551,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2557 rows × 6 columns</p>\n",
+       "<p>2922 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1394,22 +1562,22 @@
        "3     2018-01-04  05:59:00  13:21:00  16:43:00  19:17:00  20:32:00\n",
        "4     2018-01-05  06:00:00  13:21:00  16:44:00  19:18:00  20:32:00\n",
        "...          ...       ...       ...       ...       ...       ...\n",
-       "2552  2024-12-27  06:04:00  13:17:00  16:40:00  19:14:00  20:29:00\n",
-       "2553  2024-12-28  06:05:00  13:18:00  16:40:00  19:15:00  20:30:00\n",
-       "2554  2024-12-29  06:05:00  13:18:00  16:41:00  19:15:00  20:30:00\n",
-       "2555  2024-12-30  06:06:00  13:19:00  16:41:00  19:16:00  20:30:00\n",
-       "2556  2024-12-31  06:06:00  13:19:00  16:42:00  19:16:00  20:31:00\n",
+       "2917  2025-12-27  06:04:00  13:17:00  16:40:00  19:14:00  20:29:00\n",
+       "2918  2025-12-28  06:04:00  13:18:00  16:40:00  19:15:00  20:29:00\n",
+       "2919  2025-12-29  06:05:00  13:18:00  16:41:00  19:15:00  20:30:00\n",
+       "2920  2025-12-30  06:05:00  13:19:00  16:41:00  19:16:00  20:30:00\n",
+       "2921  2025-12-31  06:06:00  13:19:00  16:42:00  19:16:00  20:31:00\n",
        "\n",
-       "[2557 rows x 6 columns]"
+       "[2922 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2db = pd.concat([df2018,df2019,df2020,df2021,df2022,df2023,df2024], ignore_index=True)\n",
+    "df2db = pd.concat([df2018,df2019,df2020,df2021,df2022,df2023,df2024,df2025], ignore_index=True)\n",
     "df2db"
    ]
   },
@@ -1478,7 +1646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
