temporarily save esolat jakim data as csv

--- a/python/data extraction and cleanup/request_Data_esolatjakim.ipynb
+++ b/python/data extraction and cleanup/request_Data_esolatjakim.ipynb
@@ -1583,6 +1583,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## temporarily save to CSV file while we work on database design\n",
+    "df2db.to_csv(\"esolat2018to2025.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
