--- a/python/objectives_1_and_2.ipynb
+++ b/python/objectives_1_and_2.ipynb
@@ -3405,7 +3405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3.12env",
    "language": "python",
    "name": "python3"
   },
@@ -3419,7 +3419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
