--- a/python/objectives_1_and_2.ipynb
+++ b/python/objectives_1_and_2.ipynb
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1634,9 +1634,9 @@
     "\n",
     "    for i in range(5):\n",
     "        plot_acf(\n",
-    "            copiedEsolatDF2[copiedEsolatDF2.columns[i+1]],\\\n",
-    "            lags=100,\\\n",
-    "            ax=ax[i],\\\n",
+    "            copiedEsolatDF2[copiedEsolatDF2.columns[i+1]],\n",
+    "            lags=100,\n",
+    "            ax=ax[i],\n",
     "            title=None\n",
     "        )\n",
     "        ax[i].set_ylabel(copiedEsolatDF2.columns[i+1])\n",
@@ -1650,9 +1650,9 @@
     "    \n",
     "    for i in range(5):\n",
     "        plot_pacf(\n",
-    "            copiedEsolatDF2[copiedEsolatDF2.columns[i+1]],\\\n",
-    "            lags=100,\\\n",
-    "            ax=ax[i],\\\n",
+    "            copiedEsolatDF2[copiedEsolatDF2.columns[i+1]],\n",
+    "            lags=100,\n",
+    "            ax=ax[i],\n",
     "            title=None\n",
     "        )\n",
     "        ax[i].set_ylabel(copiedEsolatDF2.columns[i+1])\n",
@@ -1840,18 +1840,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Building the BRNN NAR Model using torchbnn"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "from torch import nn, optim\n",
+    "\n",
+    "import torchbnn as bnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = nn.Sequential(\n",
+    "    bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=2191, out_features=1),\n",
+    "    nn.ReLU(),\n",
+    "    bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=1, out_features=2191)\n",
+    ")\n",
+    "\n",
+    "mse_loss = nn.MSELoss()\n",
+    "kl_loss = bnn.BKLLoss(reduction=\"mean\", last_layer_only=False)\n",
+    "kl_weight = 0.01\n",
+    "\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.185, KL: 5.136\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.tensor(train[\"date\"].index, dtype=int).float()\n",
+    "y = torch.tensor(train[\"zuhr\"].values, dtype=float).float()\n",
+    "\n",
+    "kl_weight = 0.1\n",
+    "\n",
+    "for step in range(1000):\n",
+    "    pre = model(x)\n",
+    "    mse = mse_loss(pre, y)\n",
+    "    kl = kl_loss(model)\n",
+    "    cost = mse + (kl_weight * kl)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    cost.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "print(f\"MSE: {mse.item():0.3f}, KL: {kl.item():0.3f}\")"
+   ]
   }
  ],
  "metadata": {
