use local venv setup in notebook, build model for all five prayers

--- a/python/objectives_1_and_2.ipynb
+++ b/python/objectives_1_and_2.ipynb
@@ -1864,55 +1864,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = nn.Sequential(\n",
-    "    bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=2191, out_features=1),\n",
-    "    nn.ReLU(),\n",
-    "    bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=1, out_features=2191)\n",
-    ")\n",
-    "\n",
     "mse_loss = nn.MSELoss()\n",
     "kl_loss = bnn.BKLLoss(reduction=\"mean\", last_layer_only=False)\n",
-    "kl_weight = 0.01\n",
-    "\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.01)"
+    "kl_weight = 0.01"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_model(col_name):\n",
+    "    if col_name not in normalizedEsolatDF.columns:\n",
+    "        return\n",
+    "    \n",
+    "    model = nn.Sequential(\n",
+    "        bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=2922, out_features=1),\n",
+    "        nn.ReLU(),\n",
+    "        bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=1, out_features=2922)\n",
+    "    )\n",
+    "\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "\n",
+    "    x = torch.tensor(normalizedEsolatDF[col_name].index, dtype=int).float()\n",
+    "    y = torch.tensor(normalizedEsolatDF[col_name].values, dtype=float).float()\n",
+    "\n",
+    "    kl_weight = 0.1\n",
+    "\n",
+    "    for step in range(1000):\n",
+    "        pre = model(x)\n",
+    "        mse = mse_loss(pre, y)\n",
+    "        kl = kl_loss(model)\n",
+    "        cost = mse + (kl_weight * kl)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        cost.backward()\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "    print(f\"MSE: {mse.item():0.3f}, KL: {kl.item():0.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 0.288, KL: 5.703\n"
+      "MSE: 0.387, KL: 7.798\n"
      ]
     }
    ],
    "source": [
-    "x = torch.tensor(train[\"date\"].index, dtype=int).float()\n",
-    "y = torch.tensor(train[\"zuhr\"].values, dtype=float).float()\n",
-    "\n",
-    "kl_weight = 0.1\n",
-    "\n",
-    "for step in range(1000):\n",
-    "    pre = model(x)\n",
-    "    mse = mse_loss(pre, y)\n",
-    "    kl = kl_loss(model)\n",
-    "    cost = mse + (kl_weight * kl)\n",
-    "\n",
-    "    optimizer.zero_grad()\n",
-    "    cost.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "print(f\"MSE: {mse.item():0.3f}, KL: {kl.item():0.3f}\")"
+    "build_model(\"fajr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.337, KL: 6.542\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_model(\"zuhr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.192, KL: 5.563\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_model(\"asr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.290, KL: 5.801\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_model(\"maghrib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.485, KL: 7.156\n"
+     ]
+    }
+   ],
+   "source": [
+    "build_model(\"isha\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3.12env",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
