exclude index column

--- a/python/data_collection.ipynb
+++ b/python/data_collection.ipynb
@@ -713,8 +713,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv(\"DW_time_stamp.csv\", index=True)\n",
-    "df2.to_csv(\"DW_prayer_times.csv\", index=True)"
+    "df1.to_csv(\"DW_time_stamp.csv\", index=False)\n",
+    "df2.to_csv(\"DW_prayer_times.csv\", index=False)"
    ]
   }
  ],
