--- a/python/objective_2_new.ipynb
+++ b/python/objective_2_new.ipynb
@@ -580,8 +580,8 @@
       "==============================================================================\n",
       "Dep. Variable:            esolat_fajr   No. Observations:                 2191\n",
       "Model:               ARIMA(1, 0, [4])   Log Likelihood                6181.181\n",
-      "Date:                Tue, 17 Dec 2024   AIC                         -12354.362\n",
-      "Time:                        21:57:30   BIC                         -12331.593\n",
+      "Date:                Thu, 19 Dec 2024   AIC                         -12354.362\n",
+      "Time:                        13:25:08   BIC                         -12331.593\n",
       "Sample:                             0   HQIC                        -12346.040\n",
       "                               - 2191                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -627,8 +627,8 @@
       "==============================================================================\n",
       "Dep. Variable:            esolat_zuhr   No. Observations:                 2191\n",
       "Model:               ARIMA(1, 0, [6])   Log Likelihood                6090.095\n",
-      "Date:                Tue, 17 Dec 2024   AIC                         -12172.191\n",
-      "Time:                        21:57:36   BIC                         -12149.422\n",
+      "Date:                Thu, 19 Dec 2024   AIC                         -12172.191\n",
+      "Time:                        13:25:14   BIC                         -12149.422\n",
       "Sample:                             0   HQIC                        -12163.869\n",
       "                               - 2191                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -682,8 +682,8 @@
       "==============================================================================\n",
       "Dep. Variable:             esolat_asr   No. Observations:                 2191\n",
       "Model:               ARIMA(1, 0, [4])   Log Likelihood                6347.505\n",
-      "Date:                Tue, 17 Dec 2024   AIC                         -12687.010\n",
-      "Time:                        21:57:44   BIC                         -12664.242\n",
+      "Date:                Thu, 19 Dec 2024   AIC                         -12687.010\n",
+      "Time:                        13:25:21   BIC                         -12664.242\n",
       "Sample:                             0   HQIC                        -12678.689\n",
       "                               - 2191                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -729,8 +729,8 @@
       "==============================================================================\n",
       "Dep. Variable:         esolat_maghrib   No. Observations:                 2191\n",
       "Model:               ARIMA(1, 0, [2])   Log Likelihood                6268.495\n",
-      "Date:                Tue, 17 Dec 2024   AIC                         -12528.991\n",
-      "Time:                        21:57:50   BIC                         -12506.223\n",
+      "Date:                Thu, 19 Dec 2024   AIC                         -12528.991\n",
+      "Time:                        13:25:26   BIC                         -12506.223\n",
       "Sample:                             0   HQIC                        -12520.669\n",
       "                               - 2191                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -776,8 +776,8 @@
       "==============================================================================\n",
       "Dep. Variable:            esolat_isha   No. Observations:                 2191\n",
       "Model:               ARIMA(1, 0, [4])   Log Likelihood                6425.117\n",
-      "Date:                Tue, 17 Dec 2024   AIC                         -12842.234\n",
-      "Time:                        21:57:55   BIC                         -12819.465\n",
+      "Date:                Thu, 19 Dec 2024   AIC                         -12842.234\n",
+      "Time:                        13:25:30   BIC                         -12819.465\n",
       "Sample:                             0   HQIC                        -12833.912\n",
       "                               - 2191                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -802,6 +802,74 @@
    ],
    "source": [
     "analyze_arima(\"esolat_isha\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bayesian Regularization Neural Network (BRNN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn, optim\n",
+    "\n",
+    "import torchbnn as bnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mse_loss = nn.MSELoss()\n",
+    "kl_loss = bnn.BKLLoss(reduction=\"mean\", last_layer_only=False)\n",
+    "kl_weight = 0.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_brnn(col_name = \"\"):\n",
+    "    if col_name not in normalizedDF.columns:\n",
+    "        return\n",
+    "    \n",
+    "    model = nn.Sequential(\n",
+    "        bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=2922, out_features=1),\n",
+    "        nn.ReLU(),\n",
+    "        bnn.BayesLinear(prior_mu=0, prior_sigma=0.1, in_features=1, out_features=2922)\n",
+    "    )\n",
+    "\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "\n",
+    "    x = torch.tensor(normalizedDF[col_name].index.values, dtype=int).float()\n",
+    "    y = torch.tensor(normalizedDF[col_name].values, dtype=float).float()\n",
+    "\n",
+    "    kl_weight = 0.1\n",
+    "\n",
+    "    for step in range(1000):\n",
+    "        pre = model(x)\n",
+    "        mse = mse_loss(pre, y)\n",
+    "        kl = kl_loss(model)\n",
+    "        cost = mse + (kl_weight * kl)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        cost.backward()\n",
+    "        optimizer.step()\n",
+    "    \n",
+    "    print(f\"MSE: {mse.item():0.3f}, KL: {kl.item():0.3f}\")\n",
+    "\n",
+    "    return model"
    ]
   }
  ],
